// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`application shell visual stories > matches the desktop navigation viewport 1`] = `
<div
  data-preview-viewport="desktop"
>
  <a
    class="app-shell__skip-link"
    href="#main-content"
  >
    跳到主要内容
  </a>
  <header
    class="app-shell__header"
  >
    <div
      class="ds-container app-shell__header-content"
      style="--container-max: var(--content-wide);"
    >
      <a
        class="app-shell__brand"
        href="/zh"
      >
        风花诗酒茶
      </a>
      <div
        class="app-shell__desktop-navigation"
      >
        <nav
          aria-label="主导航"
        >
          <ul
            class="app-shell__navigation-list"
          >
            <li>
              <a
                class="app-shell__navigation-link"
                href="/zh"
              >
                首页
              </a>
            </li>
            <li>
              <a
                aria-current="page"
                class="app-shell__navigation-link"
                href="/zh/photography"
              >
                摄影作品
              </a>
            </li>
            <li>
              <a
                class="app-shell__navigation-link"
                href="/zh/research"
              >
                科研成果
              </a>
            </li>
            <li>
              <a
                class="app-shell__navigation-link"
                href="/zh/resume"
              >
                个人简历
              </a>
            </li>
            <li>
              <a
                class="app-shell__navigation-link"
                href="/zh#contact"
              >
                联系方式
              </a>
            </li>
          </ul>
        </nav>
        <div
          class="app-shell__controls"
        >
          <button
            aria-label="当前语言：中文；切换到英文"
            class="ds-button ds-button--ghost ds-button--sm"
            type="button"
          >
            <span>
              切换到英文
            </span>
          </button>
          <button
            aria-label="当前主题: 跟随系统 (当前为浅色); 切换到 浅色"
            class="ds-button ds-button--ghost ds-button--sm"
            data-hydrated="true"
            data-resolved-theme="light"
            data-theme-mode="system"
            title="主题: 跟随系统 (当前为浅色)"
            type="button"
          >
            <span>
              ◐
               
              主题
              : 
              跟随系统
            </span>
          </button>
        </div>
      </div>
      <div
        class="app-shell__mobile-navigation"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="打开菜单"
          class="ds-button ds-button--ghost ds-button--sm ds-icon-button"
          data-state="closed"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ☰
          </span>
        </button>
      </div>
    </div>
  </header>
  <main
    id="main-content"
    tabindex="-1"
  >
    <h1>
      摄影作品
    </h1>
  </main>
</div>
`;

exports[`application shell visual stories > matches the mobile navigation viewport 1`] = `
<div
  data-preview-viewport="mobile"
>
  <a
    class="app-shell__skip-link"
    href="#main-content"
  >
    跳到主要内容
  </a>
  <header
    class="app-shell__header"
  >
    <div
      class="ds-container app-shell__header-content"
      style="--container-max: var(--content-wide);"
    >
      <a
        class="app-shell__brand"
        href="/zh"
      >
        风花诗酒茶
      </a>
      <div
        class="app-shell__desktop-navigation"
      >
        <nav
          aria-label="主导航"
        >
          <ul
            class="app-shell__navigation-list"
          >
            <li>
              <a
                class="app-shell__navigation-link"
                href="/zh"
              >
                首页
              </a>
            </li>
            <li>
              <a
                aria-current="page"
                class="app-shell__navigation-link"
                href="/zh/photography"
              >
                摄影作品
              </a>
            </li>
            <li>
              <a
                class="app-shell__navigation-link"
                href="/zh/research"
              >
                科研成果
              </a>
            </li>
            <li>
              <a
                class="app-shell__navigation-link"
                href="/zh/resume"
              >
                个人简历
              </a>
            </li>
            <li>
              <a
                class="app-shell__navigation-link"
                href="/zh#contact"
              >
                联系方式
              </a>
            </li>
          </ul>
        </nav>
        <div
          class="app-shell__controls"
        >
          <button
            aria-label="当前语言：中文；切换到英文"
            class="ds-button ds-button--ghost ds-button--sm"
            type="button"
          >
            <span>
              切换到英文
            </span>
          </button>
          <button
            aria-label="当前主题: 跟随系统 (当前为浅色); 切换到 浅色"
            class="ds-button ds-button--ghost ds-button--sm"
            data-hydrated="true"
            data-resolved-theme="light"
            data-theme-mode="system"
            title="主题: 跟随系统 (当前为浅色)"
            type="button"
          >
            <span>
              ◐
               
              主题
              : 
              跟随系统
            </span>
          </button>
        </div>
      </div>
      <div
        class="app-shell__mobile-navigation"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="打开菜单"
          class="ds-button ds-button--ghost ds-button--sm ds-icon-button"
          data-state="closed"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ☰
          </span>
        </button>
      </div>
    </div>
  </header>
  <main
    id="main-content"
    tabindex="-1"
  >
    <h1>
      摄影作品
    </h1>
  </main>
</div>
`;

exports[`application shell visual stories > matches the tablet navigation viewport 1`] = `
<div
  data-preview-viewport="tablet"
>
  <a
    class="app-shell__skip-link"
    href="#main-content"
  >
    跳到主要内容
  </a>
  <header
    class="app-shell__header"
  >
    <div
      class="ds-container app-shell__header-content"
      style="--container-max: var(--content-wide);"
    >
      <a
        class="app-shell__brand"
        href="/zh"
      >
        风花诗酒茶
      </a>
      <div
        class="app-shell__desktop-navigation"
      >
        <nav
          aria-label="主导航"
        >
          <ul
            class="app-shell__navigation-list"
          >
            <li>
              <a
                class="app-shell__navigation-link"
                href="/zh"
              >
                首页
              </a>
            </li>
            <li>
              <a
                aria-current="page"
                class="app-shell__navigation-link"
                href="/zh/photography"
              >
                摄影作品
              </a>
            </li>
            <li>
              <a
                class="app-shell__navigation-link"
                href="/zh/research"
              >
                科研成果
              </a>
            </li>
            <li>
              <a
                class="app-shell__navigation-link"
                href="/zh/resume"
              >
                个人简历
              </a>
            </li>
            <li>
              <a
                class="app-shell__navigation-link"
                href="/zh#contact"
              >
                联系方式
              </a>
            </li>
          </ul>
        </nav>
        <div
          class="app-shell__controls"
        >
          <button
            aria-label="当前语言：中文；切换到英文"
            class="ds-button ds-button--ghost ds-button--sm"
            type="button"
          >
            <span>
              切换到英文
            </span>
          </button>
          <button
            aria-label="当前主题: 跟随系统 (当前为浅色); 切换到 浅色"
            class="ds-button ds-button--ghost ds-button--sm"
            data-hydrated="true"
            data-resolved-theme="light"
            data-theme-mode="system"
            title="主题: 跟随系统 (当前为浅色)"
            type="button"
          >
            <span>
              ◐
               
              主题
              : 
              跟随系统
            </span>
          </button>
        </div>
      </div>
      <div
        class="app-shell__mobile-navigation"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="打开菜单"
          class="ds-button ds-button--ghost ds-button--sm ds-icon-button"
          data-state="closed"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ☰
          </span>
        </button>
      </div>
    </div>
  </header>
  <main
    id="main-content"
    tabindex="-1"
  >
    <h1>
      摄影作品
    </h1>
  </main>
</div>
`;
